IF( WIN32 )
    ADD_DEFINITIONS( /wd4250 )
ENDIF( WIN32 )


ADD_SUBDIRECTORY(wav)

IF(CMAKE_SYSTEM_NAME STREQUAL Linux)
    ADD_SUBDIRECTORY(ogg)
ENDIF(CMAKE_SYSTEM_NAME STREQUAL Linux)




IF(ANDROID)
    CONFIGURE_FILE("${OSGSOUND_ANDROID_TEMPLATES}/Android.mk.plugins.in" "${CMAKE_CURRENT_BINARY_DIR}/Android.mk")
ENDIF()
